Use Math.clamp(...)